--- a/projects/fullstackPractice/attemptOne/package.json
+++ b/projects/fullstackPractice/attemptOne/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "express-ejs-layouts": "^2.5.1"
+    "express-ejs-layouts": "^2.5.1",
+    "mongoose": "^8.9.5"
   },
   "devDependencies": {
+    "dotenv": "^16.4.7",
     "nodemon": "^3.1.9"
   }
 }
